syntax = "proto3";

option go_package = "github.com/openline-ai/openline-customer-os/packages/server/events-processing-proto/gen/proto/go/api/grpc/v1/common";
//option go_package = "api/grpc/v1/common";

message SourceFields {
  string appSource = 1;
  string source = 2;
  string sourceOfTruth = 3 [deprecated = true];
}